<resources>
    <string name="app_name">Nutz Labs</string>
    <string name="submit">Submit</string>
    <string name="load">Load</string>
    <string name="loading">Loading…</string>
    <string name="loaded">Loaded</string>
    <string name="empty">---</string>

    <string name="incomplete_form">Incomplete form</string>

    <string name="share_title">Share</string>
    <string name="item_copied">Item Copied</string>

    <string name="error_message">Error: %s</string>
    <string name="file_saved">Saved: %s</string>

    <string name="cookie_hint"># Netscape Cookie file format…</string>

    <string name="ds_user_id">ds_user_id</string>
    <string name="sessionid">sessionid</string>
    <string name="csrftoken">csrftoken</string>
    <string name="username">username</string>

    <string name="sort_app_name">App Name</string>
    <string name="first_installed">First Installed</string>
    <string name="last_updated">Last Updated</string>
    <string name="last_opened">Last Opened</string>

    <string name="sort">Sort</string>
    <string name="open_usage_permission_settings">Open App Usage Permission Settings</string>
    <string name="export_csv">Export CSV</string>

    <string name="toggle_quicksettings1">Quick Settings Tile 1</string>
    <string name="toggle_quicksettings2">Quick Settings Tile 2</string>
    <string name="quicksetting_target_prompt">(Tap a target app to assign to this tile)</string>
    <string name="no_package">Target app not set</string>
    <string name="quicksetting_hint">(Add &amp; close to refresh)</string>

    <string name="quicksettings_select_title">Select Tile</string>
    <string-array name="quicksettings_labels">
        <item>@string/toggle_quicksettings1</item>
        <item>@string/toggle_quicksettings2</item>
    </string-array>
</resources>