<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <EditText
        android:id="@+id/edit_ds_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:padding="2dp"
        android:background="@android:color/background_light"
        android:hint="@string/ds_user_id"
        android:inputType="textNoSuggestions"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_sessionid"
        />
    <EditText
        android:id="@+id/edit_sessionid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:padding="2dp"
        android:background="@android:color/background_light"
        android:hint="@string/sessionid"
        android:inputType="textNoSuggestions"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_ds_user_id"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/edit_csrftoken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:padding="2dp"
        android:background="@android:color/background_light"
        android:hint="@string/csrftoken"
        android:inputType="textNoSuggestions"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/edit_ds_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_target_username"
        />
    <EditText
        android:id="@+id/edit_target_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:padding="2dp"
        android:background="@android:color/background_light"
        android:hint="@string/username"
        android:inputType="textNoSuggestions"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/edit_sessionid"
        app:layout_constraintStart_toEndOf="@id/edit_csrftoken"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/edit_target_username"
        />
    <ScrollView
        android:id="@+id/scroll_response"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@android:color/background_light"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/txt_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:typeface="monospace"
                tools:text="Response text"
                />
        </HorizontalScrollView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>