<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fbfbfb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/constraint_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_toggle_quicksetting_tile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:text="@string/toggle_quicksettings1"
            />
        <TextView
            android:id="@+id/txt_quicksetting1_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/quicksetting_target_prompt"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_toggle_quicksetting_tile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:text="@string/toggle_quicksettings2"
            />
        <TextView
            android:id="@+id/txt_quicksetting2_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/quicksetting_target_prompt"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#eeeeee"
            />
        <FrameLayout
            android:id="@+id/frame_applist_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/txt_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loading"
                />
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_applist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_applist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/listitem_app_simple"
                    />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>