<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fbfbfb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading"
            />
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_applist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_applist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/listitem_appinfo"
                />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false"
        app:behavior_peekHeight="24dp"
        tools:behavior_peekHeight="400dp"
        >
        <ImageView
            android:id="@+id/img_drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_drag_handle"
            android:scaleType="centerInside"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:id="@+id/img_top_shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:src="@drawable/ic_shadow_top"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toBottomOf="@id/img_drag_handle"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@id/img_top_shadow"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/img_sort_last_opened"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sort_numeric"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/last_opened"
                    app:layout_constraintTop_toTopOf="@id/lbl_sort"
                    app:layout_constraintBottom_toBottomOf="@id/lbl_sort"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="1"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#eeeeee"
                    app:layout_constraintTop_toTopOf="@id/img_sort_last_opened"
                    app:layout_constraintBottom_toBottomOf="@id/img_sort_last_opened"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_last_opened"
                    />
                <ImageView
                    android:id="@+id/img_sort_last_updated"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sort_numeric"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/last_updated"
                    app:layout_constraintTop_toTopOf="@id/lbl_sort"
                    app:layout_constraintBottom_toBottomOf="@id/lbl_sort"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_last_opened"
                    app:layout_constraintDimensionRatio="1"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#eeeeee"
                    app:layout_constraintTop_toTopOf="@id/img_sort_last_updated"
                    app:layout_constraintBottom_toBottomOf="@id/img_sort_last_updated"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_last_updated"
                    />
                <ImageView
                    android:id="@+id/img_sort_first_installed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sort_numeric"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/first_installed"
                    app:layout_constraintTop_toTopOf="@id/lbl_sort"
                    app:layout_constraintBottom_toBottomOf="@id/lbl_sort"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_last_updated"
                    app:layout_constraintDimensionRatio="1"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#eeeeee"
                    app:layout_constraintTop_toTopOf="@id/img_sort_first_installed"
                    app:layout_constraintBottom_toBottomOf="@id/img_sort_first_installed"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_first_installed"
                    />
                <ImageView
                    android:id="@+id/img_sort_alphabetic"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sort_alphabetical"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/sort_app_name"
                    app:layout_constraintTop_toTopOf="@id/lbl_sort"
                    app:layout_constraintBottom_toBottomOf="@id/lbl_sort"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_first_installed"
                    app:layout_constraintDimensionRatio="1"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#eeeeee"
                    app:layout_constraintTop_toTopOf="@id/img_sort_alphabetic"
                    app:layout_constraintBottom_toBottomOf="@id/img_sort_alphabetic"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_alphabetic"
                    />
                <TextView
                    android:id="@+id/lbl_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/sort"
                    android:textColor="@android:color/black"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/img_sort_alphabetic"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                />
            <Switch
                android:id="@+id/switch_show_system_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/show_system_apps"
                android:background="?attr/selectableItemBackground"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                />
            <TextView
                android:id="@+id/txt_open_usage_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/open_usage_permission_settings"
                android:textColor="@android:color/black"
                android:background="?attr/selectableItemBackground"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                />
            <TextView
                android:id="@+id/txt_export_csv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/export_csv"
                android:textColor="@android:color/black"
                android:background="?attr/selectableItemBackground"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>